Don't save connection state when destructing the controller

This causes neochat to crash and is done automatically by the connections

BUG: 458353